proper HTTP API; README
