# src/http/server.ts
@@ -1,17 +1,19 @@
 import express, {Express} from 'express';
 import * as OpenApiValidator from 'express-openapi-validator';
 import * as swaggerUi from 'swagger-ui-express';
-import {Rule} from '../models';
-import {API_SPEC, LOGGER, RULING_SYSTEM} from '../injection-tokens';
+import {RuleLookupFields} from '../models';
+import {API_SPEC, LOGGER, RULING_SERVICE, TRANSACTIONS_SERVICE} from '../injection-tokens';
 import winston from 'winston';
 import bodyParser from 'body-parser';
-import {RulingSystem} from '../ruling-system/ruling-system';
+import {RulingService} from '../ruling/ruling.service';
+import {TransactionsService} from '../transactions/transactions.service';
 
 export function setupServer(opts: any): Express {
     const server = express();
     const apiSpec = opts[API_SPEC];
     const logger: winston.Logger = opts[LOGGER];
-    const rulingSystem: RulingSystem = opts[RULING_SYSTEM];
+    const rulingService: RulingService = opts[RULING_SERVICE];
+    const transactionsService: TransactionsService = opts[TRANSACTIONS_SERVICE];
 
     server.use(bodyParser.json());
 
@@ -31,21 +33,57 @@ export function setupServer(opts: any): Express {
         res.send(`Hello, ${req.query.name ?? 'Sailor'}!`)
     });
 
-    server.get('/rules', (req, res) => {
-        // TODO
+    server.get('/rules', async (req, res) => {
+        try {
+            const lookupFields: RuleLookupFields = req.query;
+            const rules = await rulingService.getRules(lookupFields);
+            res.json(rules);
+        } catch (e) {
+            res.status(500).json({status: 500, message: e.message});
+        }
+    });
+
+    server.get('/rules/:id/', async (req, res) => {
+        try {
+            const id: number = parseInt(req.params.id, 10);
+            const rule = await rulingService.getRuleById(id);
+            if (rule != null) {
+                res.json(rule);
+            } else {
+                res.status(404).json({status: 401, message: 'Rule not found'})
+            }
+        } catch (e) {
+            res.status(500).json({status: 500, message: e.message});
+        }
     });
 
     server.post('/rules', async (req, res) => {
-        await rulingSystem.createRule(req.body);
-        const rule = req.body as Rule;
-        console.log(req.body);
-        logger.info(rule);
-        res.send(req.body);
-        // TODO
+        try {
+            const createdRule = await rulingService.createRule(req.body);
+            res.json(createdRule);
+        } catch (e) {
+            res.status(401).json({status: 401, message: e.message});
+        }
     });
 
-    server.put('/rules', (req, res) => {
-        // TODO
+    server.get('/transactions/', async(req, res) => {
+        try {
+            const lookupFields = req.query;
+            const transactions = await transactionsService.getTransactions(lookupFields)
+            res.json(transactions);
+        } catch (e) {
+            res.status(500).json({status: 500, message: e.message});
+        }
+    });
+
+    server.delete('/rules/:id/', async (req, res) => {
+        const id: number = parseInt(req.params.id, 10);
+        try {
+            const deletedCount = await rulingService.deleteRule(id);
+            res.json({deletedCount});
+        } catch (e) {
+            res.status(500).json({status: 500, message: e.message});
+        }
     });
 
     return server;
