# src/models.ts
@@ -1,9 +1,20 @@
 import {Sequelize, DataTypes, InferAttributes, InferCreationAttributes, Model} from 'sequelize';
-import {RuleCriteria} from './ruling-system/ruling-system';
+import {RuleCriteria} from './ruling/ruling-system';
 
 // Models are a little leaky, because they depend on sequelize
 // Something to think about is pulling out the attributes into our own model
 // and just join them here in order to decouple from the database implementation
+
+export type RuleLookupFields = {
+    active?: boolean;
+}
+
+export type EthereumTransactionLookupFields = {
+    ruleId?: number;
+    hash?: string;
+    blockHash?: string;
+    blockNumber?: string;
+}
 
 export class Rule extends Model<InferAttributes<Rule>, InferCreationAttributes<Rule>> {
     declare id: number;
@@ -12,6 +23,7 @@ export class Rule extends Model<InferAttributes<Rule>, InferCreationAttributes<R
 }
 
 export class EthereumTransaction extends Model<InferAttributes<EthereumTransaction>, InferCreationAttributes<EthereumTransaction>> {
+    declare id: string;
     declare blockHash: string;
     declare blockNumber: bigint;
     declare from: string;
@@ -25,33 +37,36 @@ export class EthereumTransaction extends Model<InferAttributes<EthereumTransacti
 
 export async function setupModels(sequelize: Sequelize) {
     Rule.init({
-        id: {type: DataTypes.INTEGER, primaryKey: true},
+        id: {type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
         active: {type: DataTypes.BOOLEAN, allowNull: false},
         criteria: {type: DataTypes.JSON}
     }, {sequelize});
 
     EthereumTransaction.init({
+        id: {type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
         blockHash: {type: DataTypes.STRING},
         blockNumber: {type: DataTypes.STRING},
         from: {type: DataTypes.STRING},
         gasPrice: {type: DataTypes.BIGINT},
-        hash: {type: DataTypes.STRING, primaryKey: true},
+        hash: {type: DataTypes.STRING},
         to: {type: DataTypes.STRING},
         transactionIndex: {type: DataTypes.BIGINT},
         type: {type: DataTypes.BIGINT},
         value: {type: DataTypes.BIGINT},
-    }, {sequelize});
+    }, {
+        indexes: [
+            { fields: ['hash'] },
+            { fields: ['blockHash'] },
+            { fields: ['blockNumber'] },
+        ],
+        sequelize
+    });
 
-    // FIXME: Transaction hashes are duplicated if the transaction matches multiple rules
-    //  Either make the transaction key (ruleId+hash)
-    //  Or just have an Id for the transactions and don't worry about it - PROBABLY THIS
-    //  Or make a many-to-many relation, where we can link transactions and rules independently
+    // FIXME: Empty criteria logs everything
 
-    EthereumTransaction.belongsTo(Rule, { foreignKey: { allowNull: false } });
-    // Rule.hasMany(EthereumTransaction);
+    EthereumTransaction.belongsTo(Rule, { onDelete: 'CASCADE', foreignKey: { name:'ruleId', allowNull: false } });
 
     await EthereumTransaction.sync({force: true});
-    await Rule.sync({alter: true});
+    await Rule.sync({force: true});
 
-    // await sequelize.sync({ alter: true });
 }
